--- a/p3/estilo/tabla.css
+++ b/p3/estilo/tabla.css
@@ -1,21 +1,29 @@
-/* TABLA PUNTUACIONES */ 
+/* TABLA PUNTUACIONES */
+.tabla_mensaje{
+    max-width: 10em;
+}
 table {
     border-collapse: collapse; 
-    width: 100%; 
+    width: 100%;
+    margin: 1em 0;
 }
   
 /* Estilos para las celdas de la tabla */
 table td, table th {
-    border: 1px solid black; 
+    border: 1px solid var(--violet);
     padding: 8px; 
+    text-align: center;
 }
   
 /* Estilos para el encabezado de la tabla */
-table th { background-color:var(--pink-crayola); }
+table th {
+    background-color:var(--pink-crayola);
+    color: var(--lpc);
+}
 
 .tuturno{
     background-color:var(--violet);
-    color:#FFF;
+    color: var(--lpc);
 }
 
 /* ------------- MEDIA QUERIES ------------- */
@@ -25,9 +33,14 @@ table th { background-color:var(--pink-crayola); }
 }
 
 @media screen and (min-width: 480px) and (max-width: 779px){
-
+    #tabla_mensaje{ margin: 0 0 2em 0; } /* down */
 }
 
 @media screen and (min-width: 780px) and (max-width: 864px){
-
+    #tabla_mensaje{ margin: 0 3em 0 0; } /* right */
+    table{ width: 25em; }
+}
+@media screen and (min-width: 865px) and (max-width: 1920px){
+    #tabla_mensaje{ margin: 0 3.5em 0 0; }
+    table{ width: 30em; }
 }
