--- a/p3/estilo/tabla.css
+++ b/p3/estilo/tabla.css
@@ -1,7 +1,4 @@
 /* TABLA PUNTUACIONES */
-.tabla_mensaje{
-    max-width: 10em;
-}
 table {
     border-collapse: collapse; 
     width: 100%;
@@ -28,19 +25,22 @@ table th {
 
 /* ------------- MEDIA QUERIES ------------- */
 @media screen and (max-width: 480px){
-    .tabla_mensaje{ width: 5em; }
     table{ width: 100%; } 
 }
 
 @media screen and (min-width: 480px) and (max-width: 779px){
-    #tabla_mensaje{ margin: 0 0 2em 0; } /* down */
+    #tabla_mensaje, .tabla_turnos{ margin: 0 0 2em 0; } /* down */
 }
 
 @media screen and (min-width: 780px) and (max-width: 864px){
-    #tabla_mensaje{ margin: 0 3em 0 0; } /* right */
-    table{ width: 25em; }
+    #tabla_mensaje, .tabla_turnos{ margin: 0 3em 0 0; } /* right */
+    #tabla_mensaje table{ width: 25em; }
+    .tabla_turnos table{ width: 19em; }
 }
 @media screen and (min-width: 865px) and (max-width: 1920px){
-    #tabla_mensaje{ margin: 0 3.5em 0 0; }
-    table{ width: 30em; }
+    #tabla_mensaje, .tabla_turnos{ margin: 0 3.5em 0 0; }
+    #tabla_mensaje table { width: 30em; }
+    .tabla_turnos table{
+        width: 25em;
+    }
 }
