--- a/p2/estilo/grid.css
+++ b/p2/estilo/grid.css
@@ -1,11 +1,11 @@
 .image-grid {
-	--gap: 16px;
+	--gap: 16px; /* hueco */
 	--num-cols: 4;
 
 	display: grid;
 
 	gap: var(--gap);
-	grid-template-columns: repeat(var(--num-cols), 1fr);
+	grid-template-columns: repeat(var(--num-cols), 1fr); /* posar tal qual */
 }
 
 .image-grid > article {
