--- a/apunts/css/estilo.css
+++ b/apunts/css/estilo.css
@@ -35,3 +35,208 @@ html {
     text-overflow: ellipsis;
 }
 
+
+/* MAIN - SECTION */
+body > main{ padding: 2em; } /* q no estiga tot apegat */
+
+    body > main > h2{
+        color: var(--violet);
+        font-size: 2em;
+        margin: 0.25em 0 1em 0;
+    }
+
+        body > main > section > div > article{
+            border-radius: 10px;
+            margin: 1em 0;
+            padding: 2em;
+            transition: 0.4s;
+            width: auto;
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        }
+        body > main > section > div > article:hover{ box-shadow: 0 0 1em 0.1em var(--mt); }
+        
+        /* preguntar ana si li amanya, deforma el sticky nav */
+        main > section > div > article > a > img {
+            transition: 0.3s;
+        }
+        main > section > div > article > a > img:hover {
+            transform:scale(1.03);
+            box-shadow: 0 .5em .5em 0 var(--vt);
+        }
+
+.carta{ padding: 0; } /* cartetes d'index */
+
+    .carta > a > h4 , .carta > div{
+        padding: 1em;
+        margin: 0;
+    }
+    .carta > div{
+        display: inline-flex;
+        align-items: center;
+        width: 100%;
+    }
+    .carta > div > p{
+        margin: 0;
+    }
+    .autorXicotet{
+        width: 38px;
+        margin-right: 1.5em;
+    }
+
+.cajita{ /* autor i data publicacion*/
+    display: flex;
+    gap: 1.5em;
+    align-items: center;
+}
+.cajita > img{
+    width: 2.4em;
+}
+    
+/* NO visible menú hamburguesa */
+body > main > nav > p{ text-align: center; }
+
+body > nav > label{ display: none; } /* lleva el &equiv */
+
+#chkMenu{ display: none; } /* lleva check*/
+
+/* BOTONES */
+.boton{
+    border-radius: .5em;
+    border:0;
+    padding: 0.5em;
+    background-color: var(--glaucous);
+    color:#FFF;
+    margin:0.5em;
+    cursor: pointer;
+}
+.boton:hover{
+    background-color:var(--t);
+    color:#fff;
+    transition: .3s;
+}
+.ok:hover{ background-color: var(--melon); }
+.ko:hover{ background-color: var(--violet); }
+
+.mg:disabled {
+    color: var(--t);
+    background-color: var(--vt);
+}
+  
+/* DIALOG */
+dialog {
+    width: 27em;
+    border: 1px solid var(--vt);
+    border-radius: 20px;
+    box-shadow: 0px 2px 17px var(--violet);
+    padding: 1em 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+dialog > h3{
+    color: var(--violet);
+    font-size: x-large;
+    margin-bottom: .5em;
+}
+dialog > p{
+    font-size: large;
+}
+  
+dialog::backdrop{ /* fondo del dialog fosquet */
+    background-color: rgba(125, 130, 184, .5); /* no funciona amb variables */
+}
+
+/* ENLLAÇOS */
+main a:not(img) { color: var(--violet); }
+main a:not(img):hover{
+    color: var(--melon);
+    transition: 0.3s;
+}
+main a:not(img):visited{ color: var(--glaucous); }
+main a:not(img):visited:hover{
+    color: var(--pink-crayola);
+    transition: .3s;
+}
+
+footer p a:hover{
+    color: #fff;
+    transition: 0.3s;
+}
+
+/* ------------- MEDIA QUERIES ------------- */
+@media screen and (max-width: 480px){
+    /* MENU HAMBUERGUESA */
+    body > nav > ul{
+        display: none;
+    }
+    body > nav > label{
+        cursor: pointer;
+        display: block;
+    }
+    body > nav > label:hover{ /*no te molt sentit xq en mobil no se hoverea*/
+        color: #fff;
+        transition: 0.4s ease;
+    }
+    #chkMenu:checked+ul{
+        display: block;
+    }
+    .image-grid { --num-cols: 1; }
+
+    /* HEADER */
+    header{
+        padding: 1.5em;
+        font-size: small;
+    }
+        header > a { margin-left: .75em; }
+        header > div{ padding-left: 1.5em; } /* xicoteta separació */
+            header > div > h1{
+                margin: 0;
+                padding: 0;
+            }
+            header > div > h2{ display: none; }
+
+    #logo { width: 2.5em; }
+    #logo:hover{ filter: none; }
+
+    body > main > h2 { font-size: 1.5em; }
+
+    /* salt de linea botons mg */
+    a[href="#comentarios"]::after { content: '\A'; white-space: pre;}
+    button.boton.ok{ margin: 0; }
+
+    /* Comentaria */
+    #comentarios > article{ margin: .5em; }
+    #comentarios > article > img{ height: 3.5em; }
+
+    /* autoras */
+    .autoria{ display: block; }
+    .autora{ width: auto; }
+    .autora > img{ height: 13em; }
+
+    /* dialog */
+    dialog { width: 20em; }
+    dialog > h3{ font-size: larger; }
+    dialog > p{ font-size: medium; }
+}
+
+@media screen and (min-width: 480px) and (max-width: 779px){
+    .image-grid { --num-cols: 2; }
+
+    header{ font-size: small; }
+        header > a { margin-left: 1.5em; }
+        header > div{ padding-left: 1.25em; } /* xicoteta separació */
+
+    .autora{ width: auto; }
+    .autora > img{ height: 14em; }
+
+    dialog { width: 24em; }
+}
+
+@media screen and (min-width: 780px) and (max-width: 864px){
+    .image-grid { --num-cols: 3; }
+    dialog { width: 24em; }
+}
+
+@media screen and (min-width: 865px) and (max-width: 1920px){
+    
+}
