--- a/apunts/css/formularios.css
+++ b/apunts/css/formularios.css
@@ -36,7 +36,7 @@ form > label > input:focus{ border-bottom: 2px solid var(--violet); }
 
 .img{ display: none; }
 
-textarea{
+/* textarea{
     background-color: var(--melon);
     color:var(--t)
 
@@ -44,7 +44,8 @@ textarea{
 textarea:focus{
     background-color: #FFF;
     color:#000;
-}
+} */
+
 datalist > option{
     border-radius: .5em;
     border:0;
@@ -60,26 +61,27 @@ datalist> option:hover{
 }
 
 /* formulari deixar COMENTARI */
-#comentarios form{
+/* #comentarios form{
     background-color: var(--mt);
     font-size: large;
     display: flex;
     padding: 2em;
 }
-#comentarios form h4{ margin: 0 0 1em 0; }
-#comentarios textarea {
-    width: 50%;
-    height: 8em;
+#comentarios form h4{ margin: 0 0 1em 0; } */
+#g-formulario textarea {
+    width: 100%;
+    /* height: 8em; */
     font-size: medium;
     font-family: 'Lato', sans-serif;
-    padding: 1em 1.25em;
+    padding: 1em;
     border: 2px solid var(--vt);
     border-radius: 6px;
     background-color: #f8f8f8;
-    resize: none;
+    resize: none; /* para que no salga pestañita de cambiar tamaño */
 }
-#comentarios textarea:hover{ border: 2px solid var(--pink-crayola); }
-#comentarios .botonera{
+#g-formulario textarea:hover{ border: 2px solid var(--pink-crayola); }
+
+/* #comentarios .botonera{
     display: inline-flex;
     width: 50%;
     justify-content: space-between;
@@ -99,38 +101,36 @@ datalist> option:hover{
     border-radius: 10px;
     transition: .3s;
     color: #FFF;
-}
+}*/
 
 @media screen and (max-width: 480px){
     form > label, form >label~fieldset{ width: 15em; }
 
-    #comentarios textarea {
-        width: 100%;
-        height: 15em;
-        padding: 1em;
+    #g-formulario textarea {
+        width: 90%;
+        /* height: 15em; */
     }
-    #comentarios .botonera{ width: 100%; }
+    /* #comentarios .botonera{ width: 100%; } */
 }
 
 @media screen and (min-width: 480px) and (max-width: 779px){   
     form > label, form >label~fieldset{ width:65%; }
 
-    #comentarios textarea {
+    #g-formulario textarea {
         width: 88%;
-        height: 13.2em;
-        padding: 1em;
+        /* height: 13.2em; */
     }
-    #comentarios .botonera{ width: 88%; }
+    /* #comentarios .botonera{ width: 88%; } */
 }
 
 @media screen and (min-width: 780px) and (max-width: 864px){
     form > label, form >label~fieldset{ width:50%; }
 
-    #comentarios textarea {
+    #g-formulario textarea {
         width: 75%;
-        height: 8.5em;
+        /* height: 8.5em; */
     }
-    #comentarios .botonera{ width: 75%; }
+    /* #comentarios .botonera{ width: 75%; } */
 }
 @media screen and (min-width: 865px) and (max-width: 1920px){
     form > label, form >label~fieldset{ width:45%; }
