--- a/apunts/css/navbar.css
+++ b/apunts/css/navbar.css
@@ -1,19 +1,3 @@
-html {
-    --glaucous: #7d82b8ff;
-    --pink-crayola: #ef798aff;
-    --melon: #f7a9a8ff;
-    --violet: #683257ff;
-    --t: #565656; /* text */
-
-    /* en rgba per si ho necessitarem per a transparencies */
-    /*
-        --glaucous: rgba(125, 130, 184, 1);
-        --pink-crayola: rgba(239, 121, 138, 1);
-        --melon: rgba(247, 169, 168, 1);
-        --violet: rgba(104, 50, 87, 1);
-    */
-}
-
 /* ------------------- NAVIGATION BAR ------------------- */
 body > nav {
     background-color: var(--violet);
@@ -21,6 +5,10 @@ body > nav {
     z-index: 1; /* fa que el hover que canvia el tam de les imatges no es superpose */
     top: 0px;
 }
+
+/* NO visible menú hamburguesa */
+body > nav > label, #chkMenu{ display: none; } /* lleva el &equiv i el check*/
+
 body > nav > ul{
     padding: 0; /* lleva sangria */
     display: flex;
@@ -57,43 +45,35 @@ nav li:not(.act):hover {
 
 /* ------------- MEDIA QUERIES ------------- */
 @media screen and (max-width: 480px){
+    /* MENU HAMBUERGUESA */
+    body > nav > ul{ display: none; }
+    
+    body > nav > label{
+        cursor: pointer;
+        display: block;
+    }
+    body > nav > label:hover{ /*no te molt sentit xq en mobil no se hoverea*/
+        color: #fff;
+        transition: 0.4s ease;
+    }
+
     nav > label[for="chkMenu"]{ /* &equiv; */
         font-size: 1.5em;
         font-weight: bold;
         color: var(--melon);
         padding: 0 .5em;
     }
-    /* .menu{
-        position: absolute;
-        width: 100%;
-        overflow: hidden;
-        flex-direction: column;
-        align-items: center;
-        background-color: var(--violet);
-        height: 0px;
-        transition: height .4s ease;
-    } */
-    /* .menu{
-        position: absolute;
-        width: 100%;
-        background-color: var(--violet);
-        transition: .4s ease;
-    }
-    #chkMenu:checked+.menu{
-        height: auto;
-    } */
-
-
     
-    #chkMenu:checked+ul li{
-        padding: .5em;
-    }
+    #chkMenu:checked+ul{ display: block; }
+
+        #chkMenu:checked+ul li{ padding: .5em; }
+
     .menu > li > a{ font-size: small; }
 }
 
 @media screen and (min-width: 480px) and (max-width: 779px){           
-    .menu li { padding: 0.65em;}   
-    .menu > li > a{ font-size: 0; }
+    .menu li { padding: 0.65em; }   
+    /* .menu > li > a{ font-size: 0; } */ /* deixa només els iconos */
     .menu > li > a > i{
         font-size: medium;
         padding-right: 0;
