css comentats (revisar)

--- a/apunts/css/estilo.css
+++ b/apunts/css/estilo.css
@@ -1,4 +1,3 @@
-/* ESTIL GENERAL */
 @import url(tabla.css);
 @import url(formularios.css);
 @import url(navbar.css);
@@ -114,11 +113,11 @@ body > main{ padding: 2em; } /* q no estiga tot apegat */
         }
         body > main > section > div > article:hover{ box-shadow: 0 0 1em 0.1em var(--mt); }
         
-        main > section > div > article > a > img { transition: 0.3s; }
-        main > section > div > article > a > img:hover {
-            transform:scale(1.03);
-            box-shadow: 0 .5em .5em 0 var(--vt);
-        }
+            main > section > div > article > a > img { transition: 0.3s; }
+            main > section > div > article > a > img:hover {
+                transform:scale(1.03);
+                box-shadow: 0 .5em .5em 0 var(--vt);
+            }
 
 /* cartetes d'index */
 .carta{ padding: 0; }
@@ -132,10 +131,10 @@ body > main{ padding: 2em; } /* q no estiga tot apegat */
         align-items: center;
         width: 100%;
     }
-    .carta > div > p{
-        margin: 0;
-        text-align: left;
-    }
+        .carta > div > p{
+            margin: 0;
+            text-align: left;
+        }
 
     .autorXicotet{ /* foto autor en cartetes */
         width: 38px;
@@ -147,9 +146,7 @@ body > main{ padding: 2em; } /* q no estiga tot apegat */
     gap: 1.5em;
     align-items: center;
 }
-.cajita > img{
-    width: 2.4em;
-}
+    .cajita > img{ width: 2.4em; }
 
 
 /* BOTONES */
@@ -186,14 +183,15 @@ dialog {
     flex-direction: column;
     align-items: center;
 }
-dialog > h3{
-    color: var(--violet);
-    font-size: x-large;
-    margin-bottom: .5em;
-}
-dialog > p{ font-size: large; }
-  
 dialog::backdrop{ background-color: rgba(125, 130, 184, .5); } /* no funciona amb variables */
+
+    dialog > h3{
+        color: var(--violet);
+        font-size: x-large;
+        margin-bottom: .5em;
+    }
+    dialog > p{ font-size: large; }
+
 
 /* ENLLAÇOS */
 main a:not(img) { color: var(--violet); }
@@ -234,8 +232,8 @@ main a:not(img):visited:hover{
 
     /* dialog */
     dialog { width: 20em; }
-    dialog > h3{ font-size: larger; }
-    dialog > p{ font-size: medium; }
+        dialog > h3{ font-size: larger; }
+        dialog > p{ font-size: medium; }
 }
 
 @media screen and (min-width: 480px) and (max-width: 779px){
