--- a/apunts/css/estilo.css
+++ b/apunts/css/estilo.css
@@ -2,6 +2,7 @@
 @import url(formularios.css);
 @import url(navbar.css);
 @import url(grid.css);
+@import url(DnD.css);
 
 /* --------------------- Estil comu --------------------- */
 html {
