--- a/apunts/css/estilo.css
+++ b/apunts/css/estilo.css
@@ -3,6 +3,7 @@
 @import url(navbar.css);
 @import url(grid.css);
 @import url(DnD.css);
+@import url(svg.css);
 
 /* --------------------- Estil comu --------------------- */
 html {
